First, small batch of context-sensitive answers for existing world new events

--- a/localisation/KR_World_News_l_english.yml
+++ b/localisation/KR_World_News_l_english.yml
@@ -1,36 +1,61 @@
 ﻿l_english:
 
 worldnews.1.t:0 "The Second American Civil War"
-worldnews.1.d:0 "To uneducated foreigners, it might seem like the crisis in the United States happened out of nowhere, but experts agree that this was a civil war years in making. Ever since the collapse of the New York Stock Exchange in 1929, the economy of the United States has been in constant downturn. \nNow, the United States has devolved into a three-way civil war between the loyalists of the old government, the syndicalist Combined Syndicates of America and the conservative and xenophobic American Union State. There have already been reports of arriving volunteers from Europe to fight for a faction of their liking. The Second American Civil War might just be the first of the many battlefields between the great powers of the world in this tough time for humanity."
-worldnews.1.a:0 "A troublesome development."
+worldnews.1.d:0 "To uneducated foreigners, it might seem like the crisis in the United States happened out of nowhere, but experts agree that this was a civil war years in making. Ever since the collapse of the New York Stock Exchange in 1929, the economy of the United States has been in constant downturn. Now, the United States has devolved into a three-way civil war between the loyalists of the old government, the syndicalist Combined Syndicates of America and the conservative and xenophobic American Union State.\n\nThere have already been reports of arriving volunteers from Europe to fight for a faction of their liking. The Second American Civil War might just be the first of the many battlefields between the great powers of the world in this tough time for humanity."
+worldnews.1.a:0 "The bastion of Democracy is under attack!"
+worldnews.1.b:0 "The light of Liberalism flickers."
+worldnews.1.c:0 "The workers bring the fight to Capitalism!"
+worldnews.1.e:0 "The fate of the American Dream is in our hands now."
+worldnews.1.f:0 "We might have to intervene, to secure an ally, and some assets."
+worldnews.1.g:0 "Let's seize this opportunity to restore Aztlán."
 
 worldnews.3.t:0 "The Second Russian Civil War"
-worldnews.3.d:0 "Mere 20 years ago, in the last years of the Weltkrieg, the Russian Empire collapsed in turmoil, ripped apart between nationalist movements, the Whites and the Reds. After a German intervention, the republican government defeated the Bolsheviks, but it appears that the Russian revolutionary spirit was not extinguished. \n\nAfter ineffective land reform by the Kerensky government and austerity measures to pay off the Brest-Litovsk reparations, as well as a crisis in the government after the President's assassination, the cities in the western part of the nation have been engulfed with the Red tide once more. Will Bukharin's Soviet Russia prevail, or will the loyalists of the White government defeat the dissenters a second time?"
-worldnews.3.a:0 "A troublesome development."
+worldnews.3.d:0 "A mere two decades years ago, in the last years of the Weltkrieg, the Russian Empire collapsed in turmoil, ripped apart between nationalist movements, the Whites and the Reds. After a German intervention, the Republican government defeated the Bolsheviks, but it appears that the Russian revolutionary spirit was not extinguished.\n\nAfter ineffective land reform by the Kerensky government and austerity measures to pay off the Brest-Litovsk reparations, as well as a crisis in the government after the President's assassination, the cities in the western part of the nation have been engulfed with the Red tide once more. Will Bukharin's Soviet Russia prevail, or will the loyalists of the White government defeat the dissenters a second time?"
+worldnews.3.a:0 "The Russian Republic was too good to last."
+worldnews.3.b:0 "The Whites will win, the order will be maintained!"
+worldnews.3.c:0 "Good luck to our Bolshevik friends!"
+worldnews.3.e:0 "We will undo the Red rebels once more!"
+worldnews.3.f:0 "Let us avenge our fallen comrades!"
 
 worldnews.4.t:0 "The Spanish Civil War"
-worldnews.4.d:0 "Ever since the defeat of Napoleon, Spain has been plagued by violence, dissent and turmoil, but it appears that these tensions have reached a breaking point. That is, the Spanish kingdom has been ripped apart in a three-sided civil war between numerous factions - the loyalists of the Madrid government, the supporters of the pretender Javier and finally the anarcho-syndicalist party known as the CNT-FAI. There are already numerous reports of volunteers and equipment being shipped to Spain from all over the world to support one faction or another. \n\nIt can be safely said that the fields and mountains of Spain will be the first battlefield of a much wider conflict between the left and the right..."
-worldnews.4.a:0 "A troublesome development."
+worldnews.4.d:0 "Ever since the defeat of Napoleon, Spain has been plagued by violence, dissent and turmoil, but it appears that these tensions have reached a breaking point. That is, the Spanish kingdom has been ripped apart in a three-sided civil war between numerous factions, the loyalists of the Madrid government, the supporters of the pretender Javier and finally the anarcho-syndicalist party known as the CNT-FAI.\n\nThere are already numerous reports of volunteers and equipment being shipped to Spain from all over the world to support one faction or another. It can be safely said that the fields and mountains of Spain will be the first battlefield of a much wider conflict between the left and the right."
+worldnews.4.a:0 "Abolishing the First Republic was a bad idea."
+worldnews.4.b:0 "Let us hope they can come to terms against CNT-FAI, rapidly."
+worldnews.4.c:0 "Spanish workers will overthrow the Bourbon and Carlist reactionaries!"
+worldnews.4.e:0 "We all know who the legitimate King of Spain is."
 
 worldnews.5.t:0 "The Second Weltkrieg"
-worldnews.5.d:0 "The Weltkrieg is universally agreed to have been the most horrible war in human existence, but it appears that even the greatest nightmares cannot deter man's lust for blood. After numerous political struggles and periods of diplomatic tension, the uneasy peace between Germany and France has broken down. These two superpowers are now mobilising their armies and preparing for a conflict never before seen to the human eye. \n\nThe military developments of the Interwar will be put to the ultimate test. New types of weapons, planes, artillery, ships and tanks will see their first usage in the battlefield. But who will emerge victorious? That is a question none can answer."
-worldnews.5.a:0 "War is hell."
+worldnews.5.d:0 "The Weltkrieg is universally agreed to have been the most horrible war in human existence, but it appears that even the greatest nightmares cannot deter man's lust for blood. After numerous political struggles and periods of diplomatic tension, the uneasy peace between Germany and France has broken down. These two superpowers are now mobilising their armies and preparing for a conflict never before seen to the human eye.\n\nThe military developments of the Interwar will be put to the ultimate test. New types of weapons, planes, artillery, ships and tanks will see their first usage in the battlefield. But who will emerge victorious? That is a question none can answer."
+worldnews.5.a:0 "Now is the time of monsters."
+worldnews.5.b:0 "The Syndicalist threat will be defeated, once and for all!"
+worldnews.5.c:0 "Mitteleuropa will fall. Total victory of the worker awaits!"
+worldnews.5.e:0 "We must strike now, to retake our homeland, to sit at the negotiation table!"
 
 worldnews.6.t:0 "The Damocles Project"
-worldnews.6.d:0 "German spies have recently revealed a mysterious, and in some ways horrifying project taken up by the French and British. Dubbed 'The Damocles Project', it is an extensive multi-nation study into the destructive power of nuclear fission, seeking to unearth any possible... weaponisation possibilities of this phenomena. The famous German physicist Albert Einstein warns that a successful 'nuclear bomb' might even be able to turn entire cities into ash. \n\nGerman intelligence agencies have shared the information about this project to their closest allies, but most of the world is still left unaware of it. However, experts disagree on whether this weapon is feasible or if this is just science fiction gone too far."
-worldnews.6.a:0 "An interesting development."
+worldnews.6.d:0 "German spies have recently revealed a mysterious, and in some ways horrifying project taken up by the French and British. Dubbed 'The Damocles Project', it is an extensive multi-nation study into the destructive power of nuclear fission, seeking to unearth any possible... weaponisation possibilities of this phenomena. The famous German physicist Albert Einstein warns that a successful 'nuclear bomb' might even be able to turn entire cities into ash.\n\nGerman intelligence agencies have shared the information about this project to their closest allies, but most of the world is still left unaware of it. However, experts disagree on whether this weapon is feasible or if this is just science fiction gone too far."
+worldnews.6.a:0 "The Syndicalists have gone too far!"
+worldnews.6.b:0 "Let us hope they share the plans at the next Internationale Congress!"
+worldnews.6.c:0 "We will have a talk with the intelligence services."
 
 worldnews.7.t:0 "Tsardom Restored"
-worldnews.7.d:0 "The Russian Republic, created in the last years of the Weltkrieg, appears to only have lasted 20 years before it's end. Plagued by disorder, conflict and ineffective governments, the Republic lost the support of the people, and Russian agencies now report that a successor of Nicholas II has been finally coronated as the new Tsar of the nation. \n\nWhile it is not known how different the international stance of this reborn Russian Empire will be, or even if the coronation of the Tsar will have any effect in 'saving the country', numerous monarchies across the world have already congratulated the Romanovs on regaining their divine birth right."
-worldnews.7.a:0 "One more democracy erased forever."
+worldnews.7.d:0 "The Russian Republic, created in the last years of the Weltkrieg, appears to only have lasted twenty years before it's end. Plagued by disorder, conflict and ineffective governments, the Republic lost the support of the people, and Russian agencies now report that a successor of Nicholas II has been finally coronated as the new Tsar of the nation.\n\nWhile it is not known how different the international stance of this reborn Russian Empire will be, or even if the coronation of the Tsar will have any effect in 'saving the country', numerous monarchies across the world have already congratulated the Romanovs on regaining their divine birth right."
+worldnews.7.a:0 "Russian Democracy has been suppressed."
+worldnews.7.b:0 "A toast to the return of the Romanovs!"
+worldnews.7.c:0 "The workers will again have the Tsar's head!"
+worldnews.7.e:0 "The rightful Tsar of Russia returns!"
 
 worldnews.8.t:0 "Russia Announces Her Ambitions"
-worldnews.8.d:0 "While many still view Russia as a failed state, torn apart by revolts, disorder and ineffective rule and serving as a buffer for Mitteleuropa, recent events have proven something different. The government of the Russian nation has announced their territorial ambitions, laying claims on almost all the territory of the former Russian Empire. And it appears they are willing to reconquer the lost land if necessary. \n\nNumerous nations in Eastern Europe have already recalled their embassies in Russia, and the world is waiting for Germany's response to this blatant attack on her sphere of influence..."
-worldnews.8.a:0 "A troublesome development."
+worldnews.8.d:0 "While many still view Russia as a failed state, torn apart by revolts, disorder and ineffective rule and serving as a buffer for Mitteleuropa, recent events have proven something different. The government of the Russian nation has announced their territorial ambitions, laying claims on almost all the territory of the former Russian Empire. And it appears they are willing to reconquer the lost land if necessary.\n\nNumerous nations in Eastern Europe have already recalled their embassies in Russia, and the world is waiting for Germany's response to this blatant attack on her sphere of influence."
+worldnews.8.a:0 "This expansionism is worrisome."
+worldnews.8.b:0 "Let us review our army and defenses, urgently."
+worldnews.8.c:0 "We will contain Russia again if need be."
+worldnews.8.e:0 "Russia will recover all its sovereign territories!"
 
 worldnews.9.t:0 "The First International Congress"
 worldnews.9.d:0 "Representatives from numerous Syndicalist and Socialist nations have gathered in Paris today, in what might just be a defining moment in the history of the ideologies. The French Commune has invited numerous countries to the first official gathering of the members of the Third Internationale to discuss political, foreign matters and cooperate on spreading Socialism further. The French opened the International with a powerful parade, festivities in Paris and finally a speech by the Chairman of the CSP. \n\nTopics like Spain, the United States and the world economic crisis are at the top priority, and it's expected that France and Britain will take initiative in the gathering."
-worldnews.9.a:0 "An interesting development."
+worldnews.9.a:0 "The Syndicalists plot once more in the open against us all."
+worldnews.9.b:0 "The Internationale Congress has many issues to settle."
+worldnews.9.c:0 "We are proud to host the first Internionale Congress!"
 
 worldnews.10.t:0 "Rise of the Mongol Empire"
 worldnews.10.d:0 "News and reliable sources of them are scarce in the vast plains of Mongolia, but it has recently come to light that the Mad Baron of Mongolia, Roman Ungern von Sternberg, has risen to new heights and declared himself to be the successor to Genghis Khan, appropriately named Ungern Khan. \n\nIt is now known what this change will entail, though. The Mongolian army has already defeated the Ma Clique and von Sternberg has declared his right to reign over all Mongolians numerous times before. Experts deny the possibility that the Mongolians could pose a threat to the established powers in the Far East, but the fresh Khan's ambition can only grow higher..."
