added BHC-DEH union event chain

--- a/localisation/KR_Bharatiyan_Commune_l_english.yml
+++ b/localisation/KR_Bharatiyan_Commune_l_english.yml
@@ -57,6 +57,8 @@ BHC_PRF_cores_1:0 "May now gain cores in §YBombay§! and §YAndhra§!\n"
 BHC_PRF_cores_2:0 "May now gain cores in §Y[PRF.GetName]§!'s princely states\n"
 BHC_shimla_uprising_successful:0 "A socialist uprising will successfully begin in §YShimla§!\n"
 BHC_kolhapur_uprising_successful:0 "A socialist uprising will successfully begin in §YKolhapur§!\n"
+BHC_summit_refused:0 "The summit can no longer occur\n"
+BHC_summit_agreed:0 "The summit proposal has been accepted\n"
 
 ### Parties ###
 BHC_totalist_party:0 "Maximists"
@@ -421,6 +423,51 @@ beng.60.t:0 "The Collapse of the Hyderabad Government"
 beng.60.d:0 "Osman Ali Khan’s autocratic ambitions and hubris have finally driven the southern princes into open revolt! For the second time in a decade, the Hindu rulers of Mysore and Travancore waver in their oaths of loyalty towards their nominal overlord. Kannada and Malayalam troops already openly engage army units loyal to the Hyderabad government whilst the federal apparatus of state in the south has been thrown into absolute disarray. Consequently, with the Nizam’s administration barely clinging onto power in the Deccan Plateau, intervention by Union forces could result in the complete disintegration of one of the two other rival governments. However, such an attack could be risky, given the fragile balance of power between the three successor states to the Raj."
 beng.60.a:0 "We shall liberate the working people of the Deccan!"
 beng.60.b:0 "This is no business of ours..."
+bengal.70.t:0 "A Message of Peace"
+bengal.70.d:0 "Our government has received a  message today, sent through channels by [BHC.GetNameDef] leadership. In it, the Mahatma requests a secret meeting between our nations - without our allies or others present, only true Indians - to discuss the possibility of a peaceful merger. One can only speculate what the Mahatma would ask, though most assume it would mean withdrawing from the Entente at the very least, and it's expected that such a plan would meet harsh resistance from the [BHC.GetAdjective] Totalist faction. But...what if it's true? What if the Mahatma can indeed quell his extremists, and we can discuss a union without ever firing a shot? The reactionaries of [PRF.GetNameDef] would never go for such a deal, but should we?"
+bengal.70.a:0 "We will attend the secret summit, if it's held"
+bengal.70.b:0 "We must speak with our allies, first"
+bengal.70.c:0 "No, even if this is serious, it will never work"
+bengal.71.t:0 "[From.GetName] Has Refused"
+bengal.71.d:0 "While we had high hopes that the [DEH.GetAdjective] would see reason and a benefit to peaceful talks, we've received quick word through channels that they will not attend any meeting to discuss reunion."
+bengal.71.a:0 "Then our path is set, sadly"
+bengal.72.t:0 "A Request from Delhi"
+bengal.72.d:0 "Curious news from Delhi today - officials from [DEH.GetNameDef] tell us that [BHC.GetNameDef] has reached out to their government to begin talks about peaceful reunion. It's unknown what the Mahatma would ask for, of it Delhi would even agree, but most believe it would mean withdrawal from the Entente at the very least. It would, however, never happen without the [BHC.GetAdjective] extremists first being quelled...so the result would be an India that was not our ally, but also not our enemy. If we refuse to give them permission, it's uknown how Delhi would react...or what we could really do if they refused to comply."
+bengal.72.a:0 "We give this meeting our blessing"
+bengal.72.b:0 "No, they are too important to the Empire's interests"
+bengal.73.t:0 "[From.GetName] Urges Caution"
+bengal.73.d:0 "Our response from the [From.GetAdjective] government is caution: [Root.GetNameDef] is too vital to the Empire's interests to allow us to fall prey to what is surely a socialist scheme. A disappointing response, even if they might be correct. Even so, if we attended the meeting anyhow, what would they do about it? Go to war with us? There's no guarantee the meeting would even happen, or that we would agree to its results."
+bengal.73.a:0 "We will attend the talks anyhow"
+bengal.73.b:0 "So be it - give the Mahatma our regrets"
+bengal.74.t:0 "[From.GetName] Gives its Blessing"
+bengal.74.d:0 "Our response from the [From.GetAdjective] government is cautious approval. If we can truly reunite with our fellow Indians, and in so doing eliminate the syndicalist threat to the sub-continent, then they would be willing to cut ties with the Dominion if that is what it takes. There is, after all, very little they could realistically do if we left, but they appreciate our consultation."
+bengal.74.a:0 "Then tell the Mahatma we would be willing to attend"
+bengal.74.b:0 "No, on second thought there's no use in risking this"
+bengal.75.t:0 "Delhi Agrees to the Summit"
+bengal.75.d:0 "The [From.GetAdjective] government has agreed to the talks, though it's clear they are quite skeptical that we will propose something they can accept - or that we will not face serious opposition from extremists in our own camp. That last concern is true enough. Word of the summit will undoubtedly leak out before it happens, and we will have a reckoning with Subhas Chandra Bose and the Maximists, if not also others who support him."
+bengal.75.a:0 "So be it!"
+bengal.76.t:0 "The Lucknow Summit"
+bengal.76.d:0 "Representatives from both [DEH.GetNameDef] and [BHC.GetNameDef] have gathered today in the city of Lucknow for a secret summit - one not attended by [DEH.GetNameDef]'s allies, and mostly unknown to the peoples of either country. The Mahatma is personally in attendance, and hopes to convince both sides of a plan of compromise which can allow them to come together and avoid a second costly civil war which will end needless lives. The reaction, should a plan of reunion emerge, will be difficult to anticipate."
+bengal.76.a:0 "We shall see how this goes..."
+bengal.77.t:0 "The Final Plan"
+bengal.77.d:0 "After days of quiet deliberation, Gandhi and the attending Unionists of [DEH.GetNameDef] have reached an accord, should we agree to pursue it. It lays out various measures which would allow collective industry to remain in the Bengal region, and for limits to be placed on princely power and affluence. It also means severing ties with the British Empire completely, and allowing the socialists to be permitted in future Indian elections, both things which will cause quite a stir once knowledge of them gets out."
+bengal.77.a:0 "Yes, we would agree to this - make the offer"
+bengal.77.b:0 "No, this is too much - call off the summit now"
+bengal.78.t:0 "The Final Plan"
+bengal.78.d:0 "After days of quiet deliberation, Gandhi and the attending Unionists of [DEH.GetNameDef] have reached an accord, should we agree to pursue it. It lays out various measures which would allow collective industry to remain in the Bengal region, and for limits to be placed on princely power and affluence. It also means severing ties with the British Empire completely, and allowing the socialists to be permitted in future Indian elections, both things which will cause quite a stir once knowledge of them gets out. Now we must decide if this is enough, or if we wish to call it off now."
+bengal.78.a:0 "For good or ill, we agree to the Mahatma's proposal"
+bengal.78.b:0 "No, this is too much - let's end this here"
+bengal.79.t:0 "The Summit is Over"
+bengal.79.d:0 "After days of quiet deliberation, it's become more and more clear that neither party will reach an agreement on reunification. The delegation from [From.GetNameDef] has elected to abandon the summit rather than continue talking, and so goes the last hope of peace on the sub-continent."
+bengal.79.a:0 "So be it"
+bengal.80.t:0 "A Path to Peace for India?"
+bengal.80.d:0 "In a surprise announcement, representatives from both the Commune of Bharatiya and the Dominion of India have announced a plan for peaceful reunion of the two countries. It is a plan which has been championed by the Mahatma, Mohandas Karamchand Gandhi, ever since his Agrarian faction achieved victory in the Commune's elections, though it required the compliance of Delhi's Unionist party and a number of compromises - which include a severance of [DEH.GetNameDef]'s ties to the British Empire and the socialist party's legalization for the upcoming election. The election is intended to be hotly contested, as there are many within [DEH.GetNameDef] who feel betrayed by the Unionist Party's secret meetings and lack of consultation. Still more, however, are openly cheering this significant step towards reuniting the sub-continent without more bloodshed, and Gandhi has been busy touring the nation making speeches to the people to embrace this bold plan."
+bengal.80.a:0 "Jai Hind!"
+bengal.80.b:0 "The traitors and socialists have merged into one?!"
+bengal.80.c:0 "I see..."
+bengal.81.t:0 "The Bharatiya Exiles"
+bengal.81.d:0 "Over the last days, streams of exiles from the former Dominion and the Commune have streamed into [Root.GetNameDef], seeking refuge and offering to fight for a true India - one represented not by traitors and socialists. We've ensured no syndicalist sympathizers number among their ranks, and there is also word that some of the north's princes do not take kindly to the Unionist Party's scheming and may attempt to break away and join our ranks. We shall see what [DEH.GetNameDef]'s coming election brings."
+bengal.81.a:0 "One way or another, a reckoning is coming"
 bengal.99.t:0 "Victory of the Bharatiya Commune"
 bengal.99.d:0 "Since the end of the Weltkrieg, the Indian sub-continent has been split into three sides: the loyalist remnants of the British Raj, the socialists of the Indian National Congress, and the reactionary Indian princes who rejected both sides. With the dust having finally settled, the socialists have proven triumphant and the Bharatiya Commune now rules unopposed over the region, setting itself up to become a preeminent world power once it recovers from the devastation of its civil war."
 bengal.99.a:0 "Jai Hind!"
