Many new stuff for Transamur

--- a/localisation/KR_Baltic_Duchy_l_english.yml
+++ b/localisation/KR_Baltic_Duchy_l_english.yml
@@ -610,6 +610,7 @@ BAT_RUS_PUP3:0 "Forced Russian Language"
 BAT_COL_KUR:0 "German Majority in Kurland"
 BAT_COL_LIV:0 "German Majority in Livland"
 BAT_COL_EST:0 "German Majority in Estland"
+BAT_autonomy:0 "Wants to be more autonomous"
 
 ### Tooltips ###
 
