--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -310,7 +310,7 @@ tram.68.b:0 "Never!"
 
 tram.80.t:0 "Anti-Kolchak Coup"
 tram.80.d:0 "The opposition have started an open revolt against us. Disloyal generals and soldiers, leading by Sergei Wojciechowski, have captured the most important neighbourhoods and now marching right to us. Those divisions which are loyal to admiral Kolchak are ready to fight with domestic enemies."
-tram.80.a:0 "Kolchak's guard have defeated the rebels"
+tram.80.a:0 "Kolchak's guards have managed to defeat the rebels"
 tram.80.b:0 "Kolchak was overthrown"
 
 tram.81.t:0 "Kolchak was overthrown"
@@ -419,6 +419,8 @@ TRM_purge:0 "Aftermath of the Purge"
 TRM_new_military:0 "New Military Cabinet"
 TRM_ships: "New Design for Ships"
 TRM_kol_propaganda:0 "State Propaganda"
+TRM_supply:0 "Improved Supply Network"
+TRM_modest_society:0 "Modest Society"
 TRM_anti_kolchak:0 "Anti-Kolchak Sentiments"
 TRM_anti_kolchak_desc:0 "Kolchak's regime has few supporters and many haters. Most of liberals are in open opposition to him, while his own generals are not trustworthy. There even is a chance that they will start a coup to overthrow Kolchak. "
 
@@ -448,7 +450,7 @@ TRM_Ind_Sib:0 "Expand Far Eastern Industry"
 TRM_Ind_Okh:0 "Improve the Okhotsk Port"
 TRM_Ind_Bai:0 "Expand Industry in Lake Baikal Region"
 TRM_Ind_Mon:0 "Expand Industry in Former Mongol Lands"
-TRM_Ind_Transsib_exp:0 "Modernise the Whole Transsib"
+TRM_Ind_Transsib_exp:0 "Improve Supply Network"
 TRM_Ind_West_Sib:0 "Expand Industry in Western Siberia"
 TRM_Ind_Research:0 "Siberian Scientists"
 TRM_Arm_Start:0 "Begin Militarisation"
@@ -503,6 +505,7 @@ TRM_Become_Russia:0 "Become Russia"
 ### Tooltips ###
 TRM_north_expand:0 "You will receive a huge conscription bonus until you'll return Russian Far East or Siberia."
 TRM_sov:0 "The Reds are too weak to control Russian Far East, this focus will give you the lands with 100% chance."
+TRM_change:0 "The Ultimate goal is reached. You become new Russia and replace the former corrupt government."
 
 ### Flags ###
 TRM_control_FE:0 "Russian Far East is our"	
@@ -511,6 +514,8 @@ TRM_Kolchak_alive:0 "Kolchak still leading the Transamur"
 TRM_Mil_coup:0 "Military Cabinet takes power"
 TRM_Dem_coup:0 "A Republic is founded"
 TRM_Yui:0 "Yui Mitsue is in power"
+TRM_capital_nov:0 "Novosibirsk is a current capital"
+TRM_move_capital:0 "Moved capital from Vladivostok"
 
 ### Companies ###
 dalzavod_heavy_industries:0 "Dalzavod Heavy Industries"
