--- a/localisation/KR_Countries_Cosmetic_l_english.yml
+++ b/localisation/KR_Countries_Cosmetic_l_english.yml
@@ -1769,6 +1769,37 @@ TRM_RUS_national_populist:0 "Russian Republic"
 TRM_RUS_national_populist_ADJ:0 "Russian"
 TRM_RUS_national_populist_DEF:0 "The Russian Republic"
 
+RUS_TRM_totalist:0 "Russian Union"
+RUS_TRM_totalist_ADJ:0 "Russian"
+RUS_TRM_totalist_DEF:0 "The Russian Union"
+RUS_TRM_radical_socialist:0 "Russian Socialist Republic"
+RUS_TRM_radical_socialist_ADJ:0 "Russian"
+RUS_TRM_radical_socialist_DEF:0 "The Russian Socialist Republic"
+RUS_TRM_syndicalist:0 "Commune of Russia"
+RUS_TRM_syndicalist_ADJ:0 "Russian"
+RUS_TRM_syndicalist_DEF:0 "The Commune of Russia"
+RUS_TRM_social_democrat:0 "Russian Federative Republic"
+RUS_TRM_social_democrat_ADJ:0 "Russian"
+RUS_TRM_social_democrat_DEF:0 "The Russian Federative Republic"
+RUS_TRM_social_liberal:0 "Russian Republic"
+RUS_TRM_social_liberal_ADJ:0 "Russian"
+RUS_TRM_social_liberal_DEF:0 "The Russian Republic"
+RUS_TRM_market_liberal:0 "Russian Republic"
+RUS_TRM_market_liberal_ADJ:0 "Russian"
+RUS_TRM_market_liberal_DEF:0 "The Russian Republic"
+RUS_TRM_social_conservative:0 "Russia"
+RUS_TRM_social_conservative_ADJ:0 "Russian"
+RUS_TRM_social_conservative_DEF:0 "The Russia"
+RUS_TRM_authoritarian_democrat:0 "Russian State"
+RUS_TRM_authoritarian_democrat_ADJ:0 "Russian"
+RUS_TRM_authoritarian_democrat_DEF:0 "The Russian State"
+RUS_TRM_paternal_autocrat:0 "Russian State"
+RUS_TRM_paternal_autocrat_ADJ:0 "Russian"
+RUS_TRM_paternal_autocrat_DEF:0 "The Russian State"
+RUS_TRM_national_populist:0 "Russian State"
+RUS_TRM_national_populist_ADJ:0 "Russian"
+RUS_TRM_national_populist_DEF:0 "The Russian State"
+
 MAD_DRAV_authoritarian_democrat:0 "Dravidia Nadu"
 MAD_DRAV_authoritarian_democrat_ADJ:0 "Dravidian"
 MAD_DRAV_authoritarian_democrat_DEF:0 "Dravidia Nadu"
