--- a/localisation/KR_Countries_l_english.yml
+++ b/localisation/KR_Countries_l_english.yml
@@ -6355,26 +6355,26 @@ TRK_national_populist:0 "Turkestan Khanate"
 TRK_national_populist_ADJ:0 "Turkestan"
 TRK_national_populist_DEF:0 "The Turkestan Khanate"
 
-TRM_totalist:0 "Transamur"
+TRM_totalist:0 "Transamur Union"
 TRM_totalist_ADJ:0 "Transamurian"
-TRM_totalist_DEF:0 "Transamur"
-TRM_syndicalist:0 "Transamur"
+TRM_totalist_DEF:0 "Transamur Union"
+TRM_syndicalist:0 "Transamur Socialist Republic"
 TRM_syndicalist_ADJ:0 "Transamurian"
-TRM_syndicalist_DEF:0 "Transamur"
-TRM_radical_socialist:0 "Transamur"
+TRM_syndicalist_DEF:0 "Transamur Socialist Republic"
+TRM_radical_socialist:0 "Transamur Socialist Republic"
 TRM_radical_socialist_ADJ:0 "Transamurian"
-TRM_radical_socialist_DEF:0 "Transamur"
-TRM_social_democrat:0 "Transamur"
+TRM_radical_socialist_DEF:0 "Transamur Socialist Republic"
+TRM_social_democrat:0 "Transamur Republic"
 TRM_social_democrat_ADJ:0 "Transamurian"
-TRM_social_democrat_DEF:0 "Transamur"
-TRM_social_liberal:0 "Transamur"
+TRM_social_democrat_DEF:0 "Transamur Republic"
+TRM_social_liberal:0 "Transamur Republic"
 TRM_social_liberal_ADJ:0 "Transamurian"
-TRM_social_liberal_DEF:0 "Transamur"
-TRM_market_liberal:0 "Transamur"
+TRM_social_liberal_DEF:0 "Transamur Republic"
+TRM_market_liberal:0 "Transamur Republic"
 TRM_market_liberal_ADJ:0 "Transamurian"
-TRM_market_liberal_DEF:0 "Transamur"
-TRM_social_conservative:0 "Transamur"
-TRM_social_conservative_ADJ:0 "Transamurian"
+TRM_market_liberal_DEF:0 "Transamur Republic"
+TRM_social_conservative:0 "Transamur Republic"
+TRM_social_conservative_ADJ:0 "Transamurian Republic"
 TRM_social_conservative_DEF:0 "Transamur"
 TRM_authoritarian_democrat:0 "Transamur"
 TRM_authoritarian_democrat_ADJ:0 "Transamurian"
