Events for German partition of France, portraits and better triggers for the russo-japanese and qingo-japanese peaces

--- a/localisation/KR_Partitions_l_english.yml
+++ b/localisation/KR_Partitions_l_english.yml
@@ -303,12 +303,98 @@ part.6.d:0 "Paris has been captured and the French have been defeated. We have r
 part.6.a:0 "Set up a French Puppet Government."
 part.6.b:0 "Partition the French Mainland!"
 part.6.c:0 "Liberate Normandy, Bretagne and France."
+part.6.g:0 "National France can have that land, if they join us!"
 part.6.e:0 "Our loyal ally, National France, will return to mainland."
 part.6.f:0 "Total conquest is preferable."
 
 part.8.t:0 "Honour the Deal"
 part.8.d:0 "In accordance with our agreement, we are now giving the French provinces we conquered back to the French government."
 part.8.a:0 "We have to obey."
+
+part.71.t:0 "A loyal government in Paris"
+part.71.d:0 "The new government of France is firmly under our control and continental France is now a loyal member of Mitteleuropa. Hopefully this will end the bloodshed in Europe once and for all."
+part.71.a:0 "Pax Europa!"
+
+part.72.t:0 "Loyal governments in the new French states"
+part.72.d:0 "The governments of the new French states are firmly under our control and their countries are now loyal members of Mitteleuropa. Hopefully, this will end the bloodshed in Europe once and for all."
+part.72.a:0 "Pax Europa!"
+
+part.73.t:0 "Loyal governments in the new French states"
+part.73.d:0 "The governments of the new French states are firmly under our control and their countries are now loyal members of our alliance. Hopefully, this will end the bloodshed in Europe once and for all."
+part.73.a:0 "Pax Europa!"
+
+part.74.t:0 "A loyal government in Paris"
+part.74.d:0 "The new government of France is firmly under our control and continental France is now a loyal member of our alliance. Hopefully, this will end the bloodshed in Europe once and for all."
+part.74.a:0 "Pax Europa!"
+
+part.75.t:0 "A loyal puppet in Paris?"
+part.75.d:0 "We have partitioned parts of the French mainland between the new nations of Brittany, Normandy and Occitania. What should we do with the remaining provinces? Should we create a fake French state and install another loyal government or should we directly rule over Paris and the other provinces? We could also give the remaining lands to the new nations, even if they can not claim them as national provinces."
+part.75.a:0 "Set up a friendly French Government."
+part.75.b:0 "Further divide the French lands between the new countries!"
+part.75.c:0 "Total conquest is preferable."
+
+part.76.t:0 "A loyal government in Paris"
+part.76.d:0 "The new government of France is firmly under our control and continental France is now a loyal member of Mitteleuropa. Hopefully, this will end the bloodshed in Europe once and for all."
+part.76.a:0 "Pax Europa!"
+
+part.77.t:0 "France renounces her claims"
+part.77.d:0 "We will renounce our claims on the lands rightfully owned by Germany and Flanders-Wallonien."
+part.77.a:0 "We have to obey."
+
+part.78.t:0 "France renounces her claims"
+part.78.d:0 "We will renounce our claims on the lands rightfully owned by Germany, Brittany and Normandy."
+part.78.a:0 "We have to obey."
+
+part.79.t:0 "Forces armées françaises"
+part.79.d:0 "Form up the Active Defense!"
+part.79.a:0 "Form Up the Troops!"
+
+part.80.t:0 "France renounces her claims"
+part.80.d:0 "We will renounce our claims on the lands rightfully owned by Germany, Brittany, Normandy and Occitania."
+part.80.a:0 "We have to obey."
+
+part.81.t:0 "An alliance with Germany in exchange for our land"
+part.81.d:0 "Germany defeated the Commune of France and they said they will give us back our provinces if we renounce our claims on Alsace-Lorraine and join their alliance, Mitteleuropa."
+part.81.a:0 "A great deal!"
+part.81.b:0 "We will never accept your proposal!"
+
+part.82.t:0 "An alliance with Germany in exchange for our land"
+part.82.d:0 "Germany defeated the Commune of France and they said they will give us back our provinces if we renounce our claims on Alsace-Lorraine and join their alliance, Mitteleuropa."
+part.82.a:0 "A great deal!"
+part.82.b:0 "We will never accept your proposal!"
+
+part.83.t:0 "Honour the deal"
+part.83.d:0 "In accordance with our agreement, we are now giving the French provinces we conquered back to the French government."
+part.83.a:0 "Welcome to Mitteleuropa!"
+
+part.84.t:0 "Honour the deal"
+part.84.d:0 "We will now honour the deal and enter an alliance with Germany."
+part.84.a:0 "It's a good deal."
+
+part.85.t:0 "Choosing the new French Head of State"
+part.85.d:0 "We have the opportunity to install a member of the German Royal families as the new King of France. It may be wise, however, to let the French choose their own government."
+part.85.a:0 "George of Hannover will be François III!"
+part.85.b:0 "Let the French decide, as long as they stay loyal."
+
+part.86.t:0 "A new king"
+part.86.d:0 "Germany imposed Francois III as the new King of France. There's nothing we can do, we have to fold and become a monarchy again."
+part.86.a:0 "Long live François III!"
+
+part.87.t:0 "Germany lets us choose our new President"
+part.87.d:0 "Germany decided to let us choose our new President. The only one who can represent us now is Albert Lebrun. Pierre Laval will lead the new government."
+part.87.a:0 "Albert Lebrun will guide our nation!"
+
+part.88.t:0 "A new government"
+part.88.d:0 "We have a new government thanks to our German friends!"
+part.88.a:0 "A new beginning."
+
+part.89.t:0 "A new government"
+part.89.d:0 "We have a new government thanks to our German friends!"
+part.89.a:0 "A new beginning."
+
+part.90.t:0 "A new government"
+part.90.d:0 "We have a new government thanks to our German friends!"
+part.90.a:0 "A new beginning."
 
 part.10.t:0 "The Fate of Britain"
 part.10.d:0 "After defeating the Union of Britain, we now control Great Britain. Many officials have called for the restoration of the United Kingdom, with its political future to be decided at a later time. The remaining minority has proposed that we consider a partition of the island. What shall we do?"
