PLC Focus Tree Work

--- a/localisation/KR_Equipment_l_english.yml
+++ b/localisation/KR_Equipment_l_english.yml
@@ -3260,6 +3260,7 @@ NZL_motorized_equipment_1:0 "Ford F30 NZP"
 HUN_motorized_equipment_1:0 "38M Botond"
 CZE_motorized_equipment_1:0 "Tatra T72"
 POL_motorized_equipment_1:0 "Ursus A"
+PLC_motorized_equipment_1:0 "Ursus A"
 
 mechanized_equipment:0 "Mechanised"
 mechanized_equipment_short:0 "Mechanised"
@@ -3280,6 +3281,13 @@ POL_mechanized_equipment_2:0 "C2P"
 POL_mechanized_equipment_2_short:0 "C2P"
 POL_mechanized_equipment_3:0 "C7P"
 POL_mechanized_equipment_3_short:0 "C7P"
+
+PLC_mechanized_equipment_1:0 "C4P"
+PLC_mechanized_equipment_1_short:0 "C4P"
+PLC_mechanized_equipment_2:0 "C2P"
+PLC_mechanized_equipment_2_short:0 "C2P"
+PLC_mechanized_equipment_3:0 "C7P"
+PLC_mechanized_equipment_3_short:0 "C7P"
 
 RAJ_mechanized_equipment_1:0 "Bren Carrier"
 RAJ_mechanized_equipment_1_short:0 "Bren Carrier"
@@ -3335,6 +3343,11 @@ POL_anti_tank_equipment_1_short:0 "37mm wz. 36"
 POL_anti_tank_equipment_2:0 "Armata ppanc. 47mm wz. 39"
 POL_anti_tank_equipment_3:0 "Armata ppanc. 76mm wz. 43"
 
+PLC_anti_tank_equipment_1:0 "Armata ppanc. 37mm wz. 36"
+PLC_anti_tank_equipment_1_short:0 "37mm wz. 36"
+PLC_anti_tank_equipment_2:0 "Armata ppanc. 47mm wz. 39"
+PLC_anti_tank_equipment_3:0 "Armata ppanc. 76mm wz. 43"
+
 DEN_anti_tank_equipment_1:0 "37mm Fodfolkskanon m1937"
 DEN_anti_tank_equipment_1_short:0 "37mm m1937"
 DEN_anti_tank_equipment_2:0 "47mm Fodfolkskanon m1940"
@@ -3379,6 +3392,10 @@ SAF_anti_air_equipment_3:0 "QF 3.7-inch"
 POL_anti_air_equipment_1:0 "Armata plot. 40mm wz. 36 Bofors"
 POL_anti_air_equipment_1_short:0 "40mm wz. 36"
 POL_anti_air_equipment_2:0 "Armata plot. 75mm wz. 36"
+
+PLC_anti_air_equipment_1:0 "Armata plot. 40mm wz. 36 Bofors"
+PLC_anti_air_equipment_1_short:0 "40mm wz. 36"
+PLC_anti_air_equipment_2:0 "Armata plot. 75mm wz. 36"
 
 CZE_anti_air_equipment_1:0 "ZB vz. 60"
 CZE_anti_air_equipment_1_short:0 "ZB vz. 60"
@@ -3429,6 +3446,11 @@ POL_artillery_equipment_1:0 "Armata 75mm wz. 31 St."
 POL_artillery_equipment_1_short:0 "75mm wz. 31"
 POL_artillery_equipment_2:0 "Haubica 100mm wz. 38 St."
 POL_artillery_equipment_3:0 "Armata 155mm wz. 40"
+
+PLC_artillery_equipment_1:0 "Armata 75mm wz. 31 St."
+PLC_artillery_equipment_1_short:0 "75mm wz. 31"
+PLC_artillery_equipment_2:0 "Haubica 100mm wz. 38 St."
+PLC_artillery_equipment_3:0 "Armata 155mm wz. 40"
 
 AUS_artillery_equipment_1:0 "7,5 cm Gebirgskanone M. 15"
 AUS_artillery_equipment_1_short:0 "7,5 cm M. 15"
@@ -3517,6 +3539,21 @@ POL_support_weapons:0 "Ckm wz. 25 & Mozdzierz wz. 18"
 POL_support_weapons2:0 "Rkm Browning wz.1928 & Granatnik wz. 36"
 POL_support_weapons3:0 "Ckm wz.32 & Mozdzierz wz. 31"
 POL_support_weapons4:0 "Nkm wz. 38 FK & Mozdzierz wz. 40 ST"
+
+PLC_infantry_equipment_0:0 "Karabin wz.98a"
+PLC_infantry_equipment_0_short:0 "Kb Mauser wz.98a"
+PLC_infantry_equipment_1:0 "Kbsp wz.38M"
+PLC_infantry_equipment_1_short:0 "Kbsp wz.38M"
+PLC_infantry_equipment_2:0 "PM wz.38 Mors"
+PLC_infantry_equipment_2_short:0 "wz. 38 Mors"
+PLC_infantry_equipment_3:0 "PM wz.43 Blyskawica"
+PLC_infantry_equipment_3_short:0 "wz. 43 Blyskawica"
+PLC_infantry_at:0 "Kb Ppanc wz. 35 Ur"
+PLC_infantry_at2:0 "ET-38 anti-tank grenade"
+PLC_support_weapons:0 "Ckm wz. 25 & Mozdzierz wz. 18"
+PLC_support_weapons2:0 "Rkm Browning wz.1928 & Granatnik wz. 36"
+PLC_support_weapons3:0 "Ckm wz.32 & Mozdzierz wz. 31"
+PLC_support_weapons4:0 "Nkm wz. 38 FK & Mozdzierz wz. 40 ST"
 
 ROM_infantry_equipment_0:0 "Mannlicher M1895"
 ROM_infantry_equipment_0_short:0 "Mannlicher M1895"
