--- a/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
+++ b/localisation/KR_Polish_Lithuanian_Commonwealth_l_english.yml
@@ -13,15 +13,15 @@ PLC_poland_first:0 "Warsaw as the Capital"
 PLC_striking_the_balance:0 "A New Capital"
 PLC_lithuania_first:0 "Vilnius as the Capital"
 PLC_the_new_bureaucracy:0 "The Bureaucracy First"
-PLC_solve_racial_tensions:0 "Solve Racial Tensions"
+PLC_solve_racial_tensions:0 "Solve Cultural Tensions"
 PLC_a_unifying_faith:0 "A Unifying Faith"
 PLC_a_new_capital:0 "Improving the Capital"
 PLC_expand_vilnius:0 "Expand Vilnius"
 PLC_build_warsaw_palace:0 "The Palace at Warsaw"
-PLC_sejm_dominance:0 "Sejm Dominance"
+PLC_sejm_dominance:0 "Dominate the Sejm"
 PLC_mendog_iii:0 "The Reign of Mindaugas III of Urach"
 PLC_lithuanian_lead:0 "Lithuanian Leadership"
-PLC_polish_language:0 "The Polish Language"
+PLC_polish_language:0 "Polish as the Official Language"
 PLC_minority_rights:0 "Minority Guarantees"
 PLC_decentralization:0 "Decentralisation"
 PLC_centralizing_power:0 "Centralising Power"
@@ -46,7 +46,7 @@ PLC_stick_with_germany:0 "Stick with Germany"
 PLC_german_tech_sharing:0 "The Kaiser Wilhelm Society"
 PLC_economic_treaties:0 "Economic Co-operation"
 PLC_german_advisors:0 "German Advisers"
-PLC_our_natural_borders:0 "Our Natural Borders"
+PLC_our_natural_borders:0 "Expanding to our Natural Borders"
 PLC_the_greater_commonwealth:0 "The Greater Commonwealth"
 PLC_ruthenian_invitation:0 "Ruthenian Referendum"
 PLC_galician_referendum:0 "The Galician Purchase"
