Fixes for Transamur

--- a/localisation/KR_Transamur_l_english.yml
+++ b/localisation/KR_Transamur_l_english.yml
@@ -369,6 +369,10 @@ tram.95.t:0 "Russia has left us alone"
 tram.95.d:0 "Despite our best efforts to join Russia, negotiations has failed. This is the end..."
 tram.95.a:0 "Damn"
 
+tram.96.t:0 "Disaster"
+tram.96.d:0 "So-called "Soviet Government" have refused to return our lands. Moreover, they have declared war on us and eager to retake Vladivostok."
+tram.96.a:0 "Damn!"
+
 ### Parties ###
 TRM_totalist_party:0 "FETP"
 TRM_radical_socialist_party:0 "TSP"
